--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 	--clr-dark: #333;
 	--clr-dark2: 230 35% 7%;
 	--clr-light: #effaf0;
+	--clr-light-gray: #777;
 	--clr-light-green: #1f9751;
 	--clr-white: 0 0% 100%;
 }
