--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 	--clr-light: #effaf0;
 	--clr-light-gray: #777;
 	--clr-light-green: #1f9751;
+	--clr-light-green2: #198145;
 	--clr-dark-green: #015d53;
 	--clr-white: 0 0% 100%;
 	--clr-error: #e12a2a;
